--- a/theme/src/scss/content-elements/hero-image/_index.scss
+++ b/theme/src/scss/content-elements/hero-image/_index.scss
@@ -19,10 +19,8 @@
 // use bootstrap mixins based on t3kit variable overrides
 // check "theme/src/styles/bootstrap/mixins/_index.scss"
 @use '../../bootstrap/mixins' as mixin;
-
-// .ce-hero-image__wrp {
-//   background: red;
-// }
+// use t3kit mixins
+@use '../../mixins/text-clamp' as t3mix;
 
 .ce-hero-image {
   position: relative;
@@ -33,7 +31,7 @@
   align-items: center;
 
   @include mixin.media-breakpoint-down(sm) {
-    min-height: 360px !important;
+    min-height: 460px !important;
   }
 }
 
@@ -49,10 +47,6 @@
   justify-content: flex-end;
 }
 
-
-// .ce-hero-image .ce-hero-image__caption-wrp {
-// }
-
 .ce-hero-image__caption {
   -webkit-font-smoothing: antialiased;
 }
@@ -65,83 +59,32 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-
 }
 
+.ce-hero-image__caption-header h1 {
+  font-weight: 900;
+  color: var(--t3-primary);
 
-
-
-.ce-img-text-link__picture .picture-partial__item-img {
-  height: 300px;
+  @include mixin.font-size(5rem);
 }
-// .hero:after {
-//   content: "";
-//   position: absolute;
-//   left: 0;
-//   top: 0;
-//   z-index: -1;
-//   width: 100%;
-//   height: 100%;
-//   background: rgba(0, 0, 0, 0.4);
-// }
 
+.ce-hero-image__caption-subheader h2 {
+  font-weight: 900;
+  color: var(--t3-white);
 
+  @include mixin.font-size(5rem);
+}
 
-// .ce-hero-image__caption-header {
+.ce-hero-image__caption-bodytext .bodytext-partial {
+  color: var(--t3-white);
 
-// }
+  @include mixin.font-size(2rem);
+  @include t3mix.text-clamp(2);
 
-// .ce-hero-image__caption-subheader {
-
-// }
-// .ce-hero-image__caption-bodytext {
-
-// }
-// .ce-hero-image__caption-link {
-
-// }
-
-// .ce-hero-image__caption-wrp._left-align .ce-hero-image__caption {
-//   margin-right: auto;
-//   text-align: left;
-// }
-
-// .ce-hero-image__caption-wrp._center-align .ce-hero-image__caption {
-//   text-align: center;
-// }
-
-// .ce-hero-image__caption-wrp._right-align .ce-hero-image__caption {
-//   margin-left: auto;
-//   text-align: right;
-// }
-
-// .ce-hero-image__caption._top {
-//   align-self: flex-start;
-// }
-
-// .ce-hero-image__caption._bottom {
-//   align-self: flex-end;
-// }
-
-// .ce-hero-image__caption-header {
-//   color: var.$white;
-//   margin-top: 5px;
-//   font-size: 1.6125rem;
-
-//   @include mixin.media-breakpoint-up(md) {
-//     font-size: 1.875rem;
-//   }
-// }
-
-// .ce-hero-image__caption-subheader {
-//   color: var.$white;
-//   // font-size: $font-size-h3 * 0.77;
-//   font-size: 1.155rem;
-
-//   @include mixin.media-breakpoint-up(md) {
-//     font-size: 1.5rem;
-//   }
-// }
+  @include mixin.media-breakpoint-up(md) {
+    @include t3mix.text-clamp(3);
+  }
+}
 
 .ce-hero-image__caption-wrp--overlay-primary {
   .picture-partial__item-img {
@@ -156,18 +99,18 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: transparentize(var.$primary, 0.7);
+    background-color: transparentize(var.$primary, 0.6);
   }
 }
 
 .ce-hero-image__caption-wrp--overlay-secondary {
-  background-color: transparentize(var.$secondary, 0.7);
+  background-color: transparentize(var.$secondary, 0.6);
 }
 
 .ce-hero-image__caption-wrp--overlay-dark {
-  background-color: transparentize(var.$dark, 0.7);
+  background-color: transparentize(var.$dark, 0.6);
 }
 
 .ce-hero-image__caption-wrp--overlay-light {
-  background-color: transparentize(var.$light, 0.7);
+  background-color: transparentize(var.$light, 0.6);
 }
